fix: overflow in layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,6 @@
 
 html {
   color-scheme: dark;
-  overflow-x: hidden;
 }
 
 .main-padding {
